<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <import type="android.widget.RadioButton"/>

        <variable
            name="viewmodel"
            type="com.galou.watchmyback.settings.SettingsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
        android:id="@+id/settings_view_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/activity_settings_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_view_progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminate="true"
            app:visibleOrInvisible="@{viewmodel.dataLoading}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_view_notification_group"
            app:layout_constraintTop_toBottomOf="@id/settings_view_progressbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small">

            <TextView
                android:id="@+id/settings_view_notification_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleWatchMyBack"
                android:text="@string/notifications"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:id="@+id/settings_view_notification_back_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_view_notification_back_switch"
                app:layout_constraintBottom_toBottomOf="@id/settings_view_notification_back_switch"
                app:layout_constraintEnd_toEndOf="@id/settings_view_notification_back_switch"
                android:text="@string/friend_back"
                android:textSize="@dimen/text_title_rv"/>

            <Switch
                android:id="@+id/settings_view_notification_back_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settings_view_notification_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/medium_padding"
                android:layout_marginTop="@dimen/margin_small"
                android:checked="@{viewmodel.preferencesLD.notificationBackSafe}"/>

            <TextView
                android:id="@+id/settings_view_notification_late_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_view_notification_late_switch"
                app:layout_constraintBottom_toBottomOf="@id/settings_view_notification_late_switch"
                app:layout_constraintEnd_toEndOf="@id/settings_view_notification_late_switch"
                android:text="@string/friend_late"
                android:textSize="@dimen/text_title_rv"/>

            <Switch
                android:id="@+id/settings_view_notification_late_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settings_view_notification_back_switch"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/medium_padding"
                android:layout_marginTop="@dimen/margin_small"
                android:checked="@{viewmodel.preferencesLD.notificationLate}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_view_emergency_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/settings_view_notification_group"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_really_big"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small">

            <TextView
                android:id="@+id/settings_view_emergency_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TitleWatchMyBack"
                android:text="@string/emergency"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/settings_view_emergency_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/local_emergency_phone_number"
                app:layout_constraintTop_toBottomOf="@id/settings_view_emergency_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_view_emergency_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={viewmodel.preferencesLD.emergencyNumber}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_view_unit_system_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/settings_view_emergency_group"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_really_big"
            android:layout_marginEnd="@dimen/margin_small">

            <TextView
                android:id="@+id/settings_view_unit_system_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleWatchMyBack"
                android:text="@string/unit_system"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/settings_view_unit_system_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_view_unit_system_title"
                android:orientation="horizontal"
                app:unitSystemType="@{viewmodel.preferencesLD.unitSystem}">
                <RadioButton
                    android:id="@+id/settings_view_unit_system_unit_metric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    android:layout_weight="1"
                    android:onClick="@{(view) -> viewmodel.updateUnitSytem(view.id)}"/>
                <RadioButton
                    android:id="@+id/settings_view_unit_system_unit_imperial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial"
                    android:layout_weight="1"
                    android:onClick="@{(view) -> viewmodel.updateUnitSytem(view.id)}"/>

            </RadioGroup>


            <RadioGroup
                android:id="@+id/settings_view_unit_system_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_view_unit_system_unit"
                android:orientation="horizontal"
                app:timeDisplay="@{viewmodel.preferencesLD.timeDisplay}">
                <RadioButton
                    android:id="@+id/settings_view_unit_system_time_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/am_pm"
                    android:layout_weight="1"
                    android:onClick="@{(view) -> viewmodel.updateTimeDisplay(view.id)}"/>
                <RadioButton
                    android:id="@+id/settings_view_unit_system_time_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_24h"
                    android:layout_weight="1"
                    android:onClick="@{(view) -> viewmodel.updateTimeDisplay(view.id)}"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_view_data_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/settings_view_unit_system_group"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_really_big"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small">

            <TextView
                android:id="@+id/settings_view_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleWatchMyBack"
                android:text="@string/data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_view_data_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settings_view_data_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/delete_all_my_data"
                app:icon="@drawable/icon_delete"
                android:onClick="@{() -> viewmodel.deleteUserData()}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>