<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapView"
        android:icon="@drawable/icon_map"
        android:title="@string/menu_title"/>
    <item
        android:id="@+id/tripsView"
        android:icon="@drawable/icon_trips"
        android:title="@string/trips_title"/>
    <item
        android:id="@+id/friendsView"
        android:icon="@drawable/icon_friends"
        android:title="@string/friends_title"/>
    <item
        android:id="@+id/checkListView"
        android:icon="@drawable/icon_check_list"
        android:title="@string/check_list_title"/>

</menu>