...
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_big"
        android:tint="@color/colorOnAccent"
        app:loadUrlInCircle="@{viewmodel.userLD.pictureUrl}"/>

    <TextView
        android:id="@+id/header_nav_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{viewmodel.userLD.username}"
        app:layout_constraintStart_toEndOf="@id/header_nav_profile_image"
        app:layout_constraintTop_toTopOf="@id/header_nav_profile_image"
        app:layout_constraintBottom_toTopOf="@id/header_nav_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_medium"
        android:textSize="@dimen/nav_header_username"
        android:textStyle="bold"
        android:textColor="@color/colorOnAccent"/>

...
